--- a/Modeling/.gitignore
+++ b/Modeling/.gitignore
@@ -1,12 +1,16 @@
+.ipynb_checkpoints/
+.DS_Store
 audio_other_testing_data_cleaned.csv
 audio_testing_data_cleaned.csv
 audio_training_data_cleaned.csv
+audio_validation_data_cleaned.csv
 cnn.py
 labels.txt
 MLP_Model1.h5
 MLP_Model2.h5
 save_np_arr_and_labels.py
 save_np_arr_and_labels_test.py
+save_np_arr_and_labels_MLP_validation.py
 testing_feature_arr.npy
 testing_labels.pickle
 testing_feature_arr_reshaped.npy
@@ -24,5 +28,7 @@ testing_feature_arr_MLP_Model1.npy
 testing_feature_arr_MLP_Model2.npy
 training_labels_MLP.npy
 testing_labels_MLP.npy
+validation_feature_arr_MLP.npy
+validation_labels_MLP.npy
 y_test_ohe.pickle
 y_train_ohe.pickle
