--- a/Modeling/.gitignore
+++ b/Modeling/.gitignore
@@ -5,12 +5,21 @@ audio_testing_data_cleaned.csv
 audio_training_data_cleaned.csv
 audio_validation_data_cleaned.csv
 cnn.py
+compress_feature_arr.py
 labels.txt
+Keras_CNN.ipynb
 MLP_Model1.h5
 MLP_Model2.h5
+MLP_Model3_featureSelector.pickle
+MLP_Model3_standardScaler.pickle
+multiclass_results_fn.pyc
+reshape_feature_arrays.py
 save_np_arr_and_labels.py
 save_np_arr_and_labels_test.py
 save_np_arr_and_labels_MLP_validation.py
+save_np_arr_and_labels_CNN.py
+save_np_arr_and_labels_MLP.py
+save_np_arr_and_labels_test_CNN.py
 testing_feature_arr.npy
 testing_labels.pickle
 testing_feature_arr_reshaped.npy
