--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 script:
   - docker run rajs966/react-test npm test -- --coverage
 
-after_success:
+after_script:
   - docker build -t rajs966/frontend ./webapp/client
   - docker build -t rajs966/proxy ./webapp/nginx
   - docker build -t rajs966/backend ./webapp/server
