--- a/webapp/nginx/default.conf
+++ b/webapp/nginx/default.conf
@@ -1,30 +1,19 @@
-server {
+upstream client {
+	server client:3000;
+}
+upstream api {
+	server api:5000;
+}
 
+server {
 	listen 80;
 
-	server_name localhost;
-
-
 	location / {
-
-        proxy_set_header   Host                 $host;
-        proxy_set_header   X-Real-IP            $remote_addr;
-        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto    $scheme;
-        proxy_set_header Host $http_host;
-
-        proxy_pass http://client:3000;
+        proxy_pass http://client;
 	}
 
 
 	location ~ /api/* {
-        proxy_set_header   Host                 $host;
-        proxy_set_header   X-Real-IP            $remote_addr;
-        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto    $scheme;
-        proxy_set_header Host $http_host;
-
-        proxy_pass http://api:5000;
+        proxy_pass http://api;
     }
-
 }
