--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,14 @@
 version: '3.7'
 
 services:
-
   api:
-    container_name: rest-api
+    container_name: api
     restart: always
     build:
       context: ./webapp/server
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    volumes:
-      - ./webapp/server:/app
 
   client:
     container_name: react-frontend
@@ -20,9 +17,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    volumes:
-      - ./webapp/client:/app
-      - '/app/node_modules'
 
   nginx:
     restart: always
@@ -31,7 +25,7 @@ services:
       context: ./webapp/nginx
       dockerfile: Dockerfile
     ports:
-      - "4000:80"
+      - "80:80"
     depends_on:
       - "api"
       - "client"
