--- a/webapp/nginx/default.conf
+++ b/webapp/nginx/default.conf
@@ -1,10 +1,10 @@
 upstream client {
-	server client:3000;
-}
-upstream api {
-	server api:5000;
+		server client:3000;
 }
 
+upstream api {
+		server api:5000;
+}
 server {
 	listen 80;
 
@@ -12,8 +12,14 @@ server {
         proxy_pass http://client;
 	}
 
-
-	location ~ /api/* {
+	location /api {
+        proxy_set_header   Host                 $host;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto    $scheme;
+        proxy_set_header Host $http_host;
+				
+				rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
-    }
+	}
 }
